--- a/TODO.txt
+++ b/TODO.txt
@@ -4,3 +4,6 @@
 - Have a search field on the top right with a search button.
 
 - Below show the word with its pronunciation and meaning. Below show examples of using the word (take them from http://www.vocabulary.com/) and finally shoe on which pages is the word found.
+
+
+- When a concrete book is selected in the filter, i.e. other than "---ALL---" option, then check if the searched word is met in other books and if yes mark the word in the details in some way, for example chage its background so that this notifies that the word is met in other places as well.
