--- a/trunk/TODO.txt
+++ b/trunk/TODO.txt
@@ -12,3 +12,5 @@
 - Keep the last selected book after close.
 
 - Allow editing of words.
+
+- Add sorting of searched words (return top 10 for example).
