--- a/trunk/TODO.txt
+++ b/trunk/TODO.txt
@@ -20,3 +20,5 @@
 - Add button for word addition.
 
 - Add binding for current Word on Home page and on Add/Edit page. Probably the HomeWindow needs to implement INotifyPropertyChanged and raise the event when setting the CurrentWord property.
+
+- Remove the 'Extended' from the business classes and use namespaces carefully, i.e. use Data namespace, only inside the class.
