--- a/trunk/TODO.txt
+++ b/trunk/TODO.txt
@@ -1,25 +1,35 @@
-- Have a listbox with the available books on the left. Have an option to select all.
-
-+ Have a search field on the top right with a search button.
-
-- Below show the word with its pronunciation and meaning. Below show examples of using the word (take them from http://www.vocabulary.com/) and finally shoe on which pages is the word found.
-
-- When a concrete book is selected in the filter, i.e. other than "---ALL---" option, then check if the searched word is met in other books and if yes mark the word in the details in some way, for example chage its background so that this notifies that the word is met in other places as well.
-
-- Keep the last selected book after close.
-
-- Allow editing of words.
-
-- Add sorting of searched words (return top 10 for example).
-
-- Allow deleting of words.
-
-- Add button for word addition.
-
-- Add binding for current Word on Home page and on Add/Edit page. Probably the HomeWindow needs to implement INotifyPropertyChanged and raise the event when setting the CurrentWord property.
-
-- Remove the 'Extended' from the business classes and use namespaces carefully, i.e. use Data namespace, only inside the class.
+------ PENDING ------
 
 - Allow adding a searched word to a book. E.g. searching in all books and find a word by clicking a button go to Add/Edit so you can provide another location in the newly selected book.
 
-- In the SaveExample you should not delete the previous examples for the word, because this keeps the last saved only.
+- Have a listbox with the available books on the left. Have an option to select all.
+
+- When a concrete book is selected in the filter, i.e. other than "---ALL---" option, then check if the searched word is met in other books and if yes mark the word in the details in some way, for example chage its background so that this notifies that the word is met in other places as well.
+
+- Add binding for current Word on Home page and on Add/Edit page. Probably the HomeWindow needs to implement INotifyPropertyChanged and raise the event when setting the CurrentWord property.
+
+- In the HomeWindow's constructor generate dynamically the example controls based on the constant of there size and add them to the containing grid.
+
+
+
+------ DONE ------
+
++ Keep the last selected book after close.
+
++ Allow editing of words.
+
++ Add sorting of searched words (return top 10 for example).
+
++ Allow deleting of words.
+
++ Add button for word addition.
+
++ Remove the 'Extended' from the business classes and use namespaces carefully, i.e. use Data namespace, only inside the class.
+
++ Add update_date column to all the tables.
+
++ In the SaveExample you should not delete the previous examples for the word, because this keeps the last saved only.
+
++ Have a search field on the top right with a search button.
+
++ Below show the word with its pronunciation and meaning. Below show examples of using the word (take them from http://www.vocabulary.com/) and finally show on which pages is the word found.
