--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,12 @@
 ------ PENDING ------
 
-D1:
-- 1. Move the 3 buttons for add, edit and delete on one row to free up space. // 15/1/15
+D1: // 15/1/15
+
+- 7. Add a grid holding the examples and make it scrollable on Add/Edit tab.
+
+- 8. On Home tab make the translation and examples scrollable.
+
+- 9. Add ocurrences for word. When a book is selected count for that book only (number of 'q's in page location field). If ALL books count all word locations.
 
 - 3. Add a second row of buttons bellow the current row with "Remove from book" and "Add to book". The remove from book will remove the word just from the current book. The "Add to book" will open Add/Edit tab with all controls disabled but the "Page location". Above it show a drop down with all the books that don't already have the word. This functionality could also be used when searching in "All books" and need to add a found word to a book. Actually allow the drop down to show all the books and let the  user select any one. If a book that already contains the word is selected just load its location in the field. // 16/1/15;
 
@@ -9,7 +14,7 @@ D1:
 
 - 5. Add font_family column to Settings table. Edit it on Settings tab. // 16/1/15;
 
-- 10. Add export of book to XML and import from XML. // 16/1/15;
+- 6. Add export of book to XML and import from XML. // 16/1/15;
 
 - Add a scrollable container round the word details so it only scrolls them and not the book list, the search and the buttons below.
 
@@ -22,6 +27,10 @@ D1:
 - When a concrete book is selected in the filter, i.e. other than "---ALL---" option, then check if the searched word is met in other books and if yes mark the word in the details in some way, for example chage its background so that this notifies that the word is met in other places as well.
 
 - Add binding for current Word on Home page and on Add/Edit page. Probably the HomeWindow needs to implement INotifyPropertyChanged and raise the event when setting the CurrentWord property.
+
++ 1. Move the 3 buttons for add, edit and delete on one row to free up space. // 15/1/15
+
++ 2. Add font_size decimal column to Settings table. Edit it on Settings tab from a numeric up down. // 16/1/15;
 
 
 
@@ -47,4 +56,3 @@ D1:
 
 + Below show the word with its pronunciation and meaning. Below show examples of using the word (take them from http://www.vocabulary.com/) and finally show on which pages is the word found.
 
-+ 2. Add font_size decimal column to Settings table. Edit it on Settings tab from a numeric up down. // 16/1/15;
