--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,9 @@
 ------ PENDING ------
 
+D2: // 15/2/15
+- 1. Add a button to export lastest words. This will read a new number setting, e.g. 20 by default, and will create a docx file with the top 20 (N) words sorted by create date.
+
+
 D1: // 15/1/15
 
 - 7. Add a grid holding the examples and make it scrollable on Add/Edit tab.
